@@ -1,3 +1,4 @@
+5/29/13 use Fort.model instead of Fort.property (second phase)
 5/29/13 use Fort.property instead of phetcommon.Property (first phase)
 5/29/13 replace DebugOriginNode with scenery.Circle
 5/29/13 use new scenery features (getChildrenCount, getChildAt) to manage precipitate particles
